# hazelnotes

./: .gitignore  LICENSE  Pipfile  README.md  classes.py  config.sample.toml  main.py  pyproject.toml
hazelnotes/: app.py  classes.py  helpers.py  test_app.py
hazelnotes-cli/: app.py  app_config.py  classes.py  helpers.py
hazelnotes_cli/: __init__.py  app.py  app_config.py  classes.py  helpers.py  test_app.py
test/: test_app.py
