[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hazelnotes-cli"
version = "0.0.1"
authors = [
  { name="Colin Maudry", email="colin@maudry.com" },
]
description = "Command line note manager for HedgeDoc"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ColinMaudry/hazelnotes"
"Bug Tracker" = "https://github.com/ColinMaudry/hazelnotes/issues"