[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hazelnotes_cli"
authors = [{name = "Colin Maudry", email = "colin@maudry.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
"typer",
"peewee",
"datetime",
"python-slugify",
"pandas",
"toml",
"requests"
]


[project.urls]
Home = "https://github.com/ColinMaudry/hazelnotes"

[project.scripts]
hazelnotes = "hazelnotes_cli.app:typer_app"
